src/test/deca/context/valid/7_algo.deca
// Description:
//    Programme minimaliste traitant utilisant une boucle while avec condition et affectation.
//
// Resultats:
// Valeur: 3
//
// Historique:
//    cree le 01/01/2022

{
        int i = 1;
        int n = 10;
        while(i*(i+1) <= n) {
        	i = i+1;
        }
        println("Valeur: ", i);
}
