src/test/deca/context/invalid/12_MultiDecl.deca
// Description:
//    Affectation et typage
//
// Resultats:
//	Ligne 13: ContextualError: L'identificateur ne peut etre defini plus qu'une fois
// 
// Historique:
//    cree le 01/01/2022

{
	int i = 1;
	// Doit etre refuse.
   	int i = 3;
}
